[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemies/Boss/Boss.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 48.5161

[node name="Boss" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 34
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="WeaponPoint" type="Node2D" parent="."]
position = Vector2( 50, 0 )

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
